WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306884
Print Preview Safari doesn't handle the light text on a black background when Print Background is disabled
https://bugs.webkit.org/show_bug.cgi?id=306884
Summary
Print Preview Safari doesn't handle the light text on a black background when...
Abhaya
Reported
2026-02-03 10:25:21 PST
Created
attachment 478236
[details]
See that print preview dialog has blank white space in place of text. Safari Version: Version 26.2 (20623.1.14.18.4) MacOS Version: 15.7.3 Hi Dev Team, I was trying to print preview and save a hacker noon article. But the print preview didn't have any text in it. Just the website header/footer and photo. The print preview works in Chrome browser though, so its not the website bug I think. Try on:
https://hackernoon.com/abhaya-uprety-is-reshaping-parking-one-line-of-code-at-a-time
Thanks, Abhaya
Attachments
See that print preview dialog has blank white space in place of text.
(538.04 KB, image/png)
2026-02-03 10:25 PST
,
Abhaya
no flags
Details
rendering in safari, firefox, chrome
(712.55 KB, image/png)
2026-02-03 19:22 PST
,
Karl Dubost
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2026-02-03 19:22:36 PST
Created
attachment 478241
[details]
rendering in safari, firefox, chrome OK the difference in between Safari and Firefox/Chrome. is in the ability to print the background? On Safari. Maybe the missing feature is that if Print Background is not enabled. It should default to black color for the text? But then what would happen for text in colors which would be visible on white background. The thing which is sure in this case, if we do not print the background, the text is not visible. On Firefox If I activate print background. it shows the text white on black. So they manage it. And they also manage the change for the light green title, and make it a dark green. On Chrome It doesn't handle the light colored titles as darker on white, just the paragraph. And some aspects of the UI becomes not readable whichever options we chose print or not print the background.
Radar WebKit Bug Importer
Comment 2
2026-02-10 10:26:13 PST
<
rdar://problem/170070133
>
Tim Horton
Comment 3
2026-03-19 14:02:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60958
EWS
Comment 4
2026-03-20 01:40:41 PDT
Committed
309604@main
(d4b8d84d7490): <
https://commits.webkit.org/309604@main
> Reviewed commits have been landed. Closing PR #60958 and removing active labels.
Tim Horton
Comment 5
2026-03-20 10:55:34 PDT
***
Bug 238600
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug